@@ -10,6 +10,23 @@ class SheldonClient
       response.code == '200' ? Node.new( JSON.parse(response.body) ) : nil
     end
 
+    def self.fetch_sheldon_connection( object )
+      if object.is_a?(Hash)
+        unless object[:from] && object[:type]
+          raise ArgumentError.new('You have to specify from and type')
+        end
+
+        return fetch_edges(object[:from], object[:type]) unless object[:to]
+
+        url = node_connections_url(object[:from], object[:type], object[:to])
+      else
+        url = connnections_url( object )
+      end
+
+      response = send_request( :get, url)
+      response.code == '200' ? Connection.new( JSON.parse(response.body) ) : false
+    end
+
     def self.fetch_edges( node_id, type )
       response = send_request( :get, node_connections_url(node_id, type) )
       response.code == '200' ? connection_collection( JSON.parse(response.body) ) : false
